--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "laravel-echo": "^1.4.0",
         "moment": "^2.22.2",
         "pusher-js": "^4.3.0",
-        "vue2-animate": "^2.0.0"
+        "vue2-animate": "^2.0.0",
+        "vuex": "^3.0.1"
     }
 }
